# linkvault-mcp-server

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt  server.py  url_database.json  url_manager.py
data/: README.md  bookmarks.db
src/: __init__.py  server.py  url_manager.py
src/utils/: __init__.py  browser_integration.py
